--- a/src/App.css
+++ b/src/App.css
@@ -31,14 +31,18 @@
 
 /* Display Style */
 .Disp {
-  background-color: #74796B;
+  color: white;
   border-radius: .4rem;
-  box-shadow: 0px 0px 10px 0px rgb(0,0,0.1);
-  font-size: 2rem;
-  height: 50px;
+  font-size: 1.5rem;
+  height: 100px;
   margin-bottom: 1rem;
-  padding-right: 10px;
-  text-align: right;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: pre-line;
+  overflow-wrap: break-word;
 }
 
 /* Button Styles */
@@ -56,7 +60,7 @@
   background-color: #505863;
   border-radius: .4rem;
   color: whitesmoke;
-  font-size: 2rem;
+  font-size: 1.5rem;
   height: 50px;
   width: 100%;
 }
@@ -66,6 +70,7 @@
   color: whitesmoke;
 }
 
+/* Full Width Button */
 .full-width {
   grid-column: span 3;
 }
